- Fixed an issue with Time.h in minigin causing issues with std::library (Changed the name to TimeGameEngine.h) - Fixed an issue with InputManager.h using SDL.h then causing errors with main function (SDL.h has been replaced with better fitting includes)

--- a/Minigin/Minigin.vcxproj
+++ b/Minigin/Minigin.vcxproj
@@ -230,7 +230,7 @@
     <ClInclude Include="Texture2D.h" />
     <ClInclude Include="RenderComponent.h" />
     <ClInclude Include="ThrashTheCacheComponent.h" />
-    <ClInclude Include="Time.h" />
+    <ClInclude Include="TimeGameEngine.h" />
     <ClInclude Include="Transform.h" />
   </ItemGroup>
   <ItemGroup>
@@ -267,7 +267,7 @@
     <ClCompile Include="Texture2D.cpp" />
     <ClCompile Include="RenderComponent.cpp" />
     <ClCompile Include="ThrashTheCacheComponent.cpp" />
-    <ClCompile Include="Time.cpp" />
+    <ClCompile Include="TimeGameEngine.cpp" />
     <ClCompile Include="Transform.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
