- Implemented PlayerMovementComponent that interacts with the LevelGridComponent - Already can move inside the grid, but still need warping and pellet interaction

--- a/MsPacman/MsPacman.vcxproj.filters
+++ b/MsPacman/MsPacman.vcxproj.filters
@@ -61,7 +61,7 @@
       <Filter>Header Files\Components</Filter>
     </ClInclude>
     <ClInclude Include="PlayerMovementComponent.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\Components</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -102,7 +102,7 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="PlayerMovementComponent.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\Components</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
