- Implemented Sound System Week 8 - Added IAudioService Interface - Added NuullAudioService as default service for no logging - Added SDLMixerAudioService implements SDL_mixer logic for sounds - Added ServiceLocator as global service handler - Updated Minigin to initialize SDL_mixer - Updated PlayerMovementComponent to add and play sounds

--- a/Minigin/Minigin.vcxproj
+++ b/Minigin/Minigin.vcxproj
@@ -208,6 +208,10 @@
     <ClInclude Include="Event.h" />
     <ClInclude Include="Font.h" />
     <ClInclude Include="GameObject.h" />
+    <ClInclude Include="IAudioService.h" />
+    <ClInclude Include="NullAudioService.h" />
+    <ClInclude Include="SDLMixerAudioService.h" />
+    <ClInclude Include="ServiceLocator.h" />
     <ClInclude Include="Subject.h" />
     <ClInclude Include="InputManager.h" />
     <ClInclude Include="Minigin.h" />
@@ -236,12 +240,16 @@
     <ClCompile Include="ControllerInput.cpp" />
     <ClCompile Include="Font.cpp" />
     <ClCompile Include="GameObject.cpp" />
+    <ClCompile Include="IAudioService.cpp" />
     <ClCompile Include="InputManager.cpp" />
     <ClCompile Include="Minigin.cpp" />
+    <ClCompile Include="NullAudioService.cpp" />
     <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="ResourceManager.cpp" />
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="SceneManager.cpp" />
+    <ClCompile Include="SDLMixerAudioService.cpp" />
+    <ClCompile Include="ServiceLocator.cpp" />
     <ClCompile Include="Subject.cpp" />
     <ClCompile Include="TextComponent.cpp" />
     <ClCompile Include="Texture2D.cpp" />
